fixed visibility

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -79,16 +79,24 @@
   }
 }
 
-.about__full {
+.about__full--closed {
   display: none;
 }
 
-.about__full-tablet {
+.about__full--opened {
+  display: block;
+}
+
+.about__full-tablet--closed {
   display: inline;
 
   @include vp-767 {
     display: none;
   }
+}
+
+.about__full-tablet--opened {
+  display: inline;
 }
 
 .about__content button {
